[package]
name = "mustachers"
version = "0.1.0"
authors = ["Brian Schiller <bgschiller@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustface = "0.1.2"
image = "0.21.0"
imageproc = "0.18.0"
actix-web = "1.0.0"
actix-multipart = "0.1.1"
env_logger = "0.6"
futures = "0.1.25"
rand = "0.3"